# checkers_symulator

./: .gitignore  main.py  pyproject.toml  readme.md  reinforcement.py  settings.json
algorithm/: algorithm.py  iterative_deepening.py  minmax.py  monte_carlo_search_tree.py  negamax_alpha_beta.py  reinforcement_learning.py
checkers_tensorboard/MaskablePPO_0/: events.out.tfevents.1783373607.DESKTOP-C3BV9QG.29020.0  events.out.tfevents.1783374846.DESKTOP-C3BV9QG.9764.0  events.out.tfevents.1783375968.DESKTOP-C3BV9QG.7428.0  events.out.tfevents.1783376282.DESKTOP-C3BV9QG.23512.0  events.out.tfevents.1783416681.DESKTOP-C3BV9QG.22232.0  events.out.tfevents.1783417748.DESKTOP-C3BV9QG.24336.0
heuristic/: MCTSHeuristic.py  heuristic.py
representation/: board.py  move.py  pawn.py  problem.py
view/: boardDrawer.py
warcaby.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
