[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "warcaby"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=1.3.0",
    "stable-baselines3>=2.9.0",
    "sb3-contrib>=2.4.0",
    "tensorboard>=2.18.0"
]

[tool.setuptools]
packages = ["view", "algorithm", "heuristic", "representation"]